infraestructura/manifests/05-sg-public.tf
# Security Group for Public Host

resource "aws_security_group" "frontend" {
  name        = "allow_frontend"
  description = "Allow 80 inbound traffic"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "80 from world"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "443 from world"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}
